fixed horizontal scroll

--- a/client/src/css/TimelineModal.css
+++ b/client/src/css/TimelineModal.css
@@ -58,3 +58,7 @@ li {
     color: rgb(223, 201, 80);
     z-index: 1000;
 }
+
+.glyphicon:hover {
+    cursor: pointer;
+}
